<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/blue" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="12dp"
        android:background="@color/blue"
        android:src="@drawable/ic_back_btn"/>

    <ImageView
        android:id="@+id/iv_detail_image"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_bg"
        android:src="@drawable/poster_a_star_is_born" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_detail_image"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/softblack"/>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/tv_detail_title"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_detail_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20xx"
            android:textColor="@color/darkgray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="|"
            android:textColor="@color/darkgray"/>

        <TextView
            android:id="@+id/tv_detail_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0h_00m"
            android:textColor="@color/darkgray"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_detail_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/ll1"
        android:gravity="center_horizontal"
        android:text="@string/genre"
        android:textColor="@color/darkgray"/>

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_detail_genre"
        android:paddingHorizontal="12dp"
        android:text="@string/overview"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/darkgray"/>

    <TextView
        android:id="@+id/tv_detail_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/overview"
        android:paddingHorizontal="12dp"
        android:text="@string/desc"
        android:textColor="@color/darkgray" />
</RelativeLayout>